--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip && pip install pyinstaller && python setup.py install
+          python -m pip install --upgrade pip && pip install pyinstaller
 
       - name: Build testexe
         run: |
