--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,19 +21,18 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         python-version: [3.7]
-        filename: [bd_direct_scan]
         include:
           - os: ubuntu-latest
             target: linux
-            exefile: dist/${{ matrix.filename }}
+            exefile: dist/bd_direct_scan
 
           - os: macos-latest
             target: macos
-            exefile: dist/${{ matrix.filename }}
+            exefile: dist/bd_direct_scan
 
           - os: windows-latest
             target: windows
-            exefile: dist/${{ matrix.filename }}.exe
+            exefile: dist/bd_direct_scan.exe
 
     steps:
       - name: Checkout Repository
@@ -50,7 +49,7 @@ jobs:
 
       - name: Build testexe
         run: |
-          pyinstaller --onefile bdscan/bdscanaction.py --hidden-import=_cffi_backend --name=${{ matrix.filename }}
+          pyinstaller --onefile bdscan/bdscanaction.py --hidden-import=_cffi_backend --name=bd_direct_scan
           
       - uses: actions/upload-artifact@v2
         with:
