--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
             target: linux
             exefile: dist/bd_direct_scan
 
-          - os: macos-latest
+          - os: macos-10.15
             target: macos
             exefile: dist/bd_direct_scan
 
